--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -2,7 +2,14 @@
 
 Logged In as {{ user.username }}
 
-<a href="#">Logout</a>
+
+
+<form action="{% url 'logoutuser' %}" method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Loguut</button>
+
+</form>
 
 {% else %}
 
