--- a/todo/templates/todo/viewtodo.html
+++ b/todo/templates/todo/viewtodo.html
@@ -11,4 +11,15 @@
     {{ form.as_p }}
     <button type="submit">Save</button>
 </form>
+
+<form method="POST" action="{% url 'completetodo' todo.id %}">
+    {% csrf_token %}
+    <button type="submit">Complete</button>
+</form>
+
+<form method="POST" action="{% url 'deletetodo' todo.id %}">
+    {% csrf_token %}
+    <button type="submit">Deelte</button>
+</form>
+
 {% endblock %}
