--- a/todo/templates/todo/createtodo.html
+++ b/todo/templates/todo/createtodo.html
@@ -15,18 +15,15 @@
         {% endif %}
         <form method="POST">
             {% csrf_token %}
-            <div class="form-group">
-                <label for="title">Title</label>
-                <input type="text" name="title" class="form-control" id="title" required>
+
+            {{ form.as_p }}
+
+            <div class="mb-3">
+                <a href="{% url 'crear_ubicacion' %}" class="btn btn-sm btn-outline-secondary">
+                    + Agregar nueva ubicacion
+                </a>
             </div>
-            <div class="form-group">
-                <label for="memo">Memo</label>
-                <textarea name="memo" class="form-control" id="memo"></textarea>
-            </div>
-            <div class="form-group form-check">
-                <input type="checkbox" name="important" class="form-check-input" id="important">
-                <label class="form-check-label" for="important">Important</label>
-            </div>
+
             <button type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
