--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -37,6 +37,9 @@
                     <li class="nav-item {{ create }}">
                         <a class="nav-link" href="{% url 'createtodo' %}">Create</a>
                     </li>
+                    <li class="nav-item {{ ordenentrada }}">
+                        <a class="nav-link" href="{% url 'crear_orden_entrada' %}">Orden Entrada</a>
+                    </li>
 
                 </ul>
                 {% endif %}
