--- a/todo/templates/todo/viewtodo.html
+++ b/todo/templates/todo/viewtodo.html
@@ -4,6 +4,15 @@
 <div class="row justify-content-center mt-5">
     <div class="col-md-5">
         <h2>New Todo</h2>
+        <p>
+            <strong>Stock:</strong> {{ todo.stock }}<br>
+            <strong>Ubicacion:</strong>
+            {% if todo.ubicacion %}
+            {{ todo.ubicacion }}
+            {% else %}
+            sin asignar 
+            {% endif %}
+        </p>
     </div>
 </div>
 <div class="row justify-content-center mt-5">
