--- a/todo/templates/todo/createtodo.html
+++ b/todo/templates/todo/createtodo.html
@@ -1,31 +1,57 @@
 {% extends "todo/base.html" %}
 
 {% block content %}
+
 <div class="row justify-content-center mt-5">
     <div class="col-md-5">
         <h2>New Todo</h2>
     </div>
 </div>
-<div class="row justify-content-center mt-5">
+
+<div class="row justify-content-center mt-3">
     <div class="col-md-5">
+
         {% if error %}
-        <div class="alert alert-danger" role="alert">
-            {{ error }}
-        </div>
+        <div class="alert alert-danger">{{ error }}</div>
         {% endif %}
-        <form method="POST">
-            {% csrf_token %}
 
-            {{ form.as_p }}
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <form method="POST">
+                    {% csrf_token %}
 
-            <div class="mb-3">
-                <a href="{% url 'crear_ubicacion' %}" class="btn btn-sm btn-outline-secondary">
-                    + Agregar nueva ubicacion
-                </a>
+                    <div class="mb-3">
+                        {{ form.title.label_tag }}
+                        {{ form.title }}
+                    </div>
+
+                    <div class="mb-3">
+                        {{ form.memo.label_tag }}
+                        {{ form.memo }}
+                    </div>
+
+                    <div class="form-check mb-3">
+                        {{ form.important }}
+                        {{ form.important.label_tag }}
+                    </div>
+
+                    <div class="mb-3">
+                        {{ form.ubicacion.label_tag }}
+                        {{ form.ubicacion }}
+                        <a href="{% url 'crear_ubicacion' %}"
+                           class="btn btn-sm btn-outline-secondary ms-2">
+                             Nueva ubicacion
+                        </a>
+                    </div>
+
+                    <div class="d-flex justify-content-between">
+                        <button type="submit" class="btn btn-primary">Save</button>
+                        <a href="{% url 'currenttodos' %}" class="btn btn-link"> Cancel</a>
+                    </div>
+                </form>
             </div>
+        </div>
 
-            <button type="submit" class="btn btn-primary">Save</button>
-        </form>
     </div>
 </div>
 {% endblock %}
