--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -10,8 +10,8 @@
 <div class="row justify-content-center mt-5">
     <div class="col-md-7 text-center">
 
-        <h1>Simply Your Todos. Woo!</h1>
-        <p>Life is fun. But life is also busy. There's a million different things you could be doing. But what matters is <u>what</u> you do. We created <b><i>Todo Woo</i></b> to help you make sense of all of your opportunities and live that life that matters most to you. Your new organized life awaits.</p>
+        <h1>Sistema de Gestion de Bodega Todo</h1>
+        <p>Bienvenidos al sistema de Gestion de la bodega<u>Que</u> tenga Buen dia <b><i>Todo Woooo</i></b> Nuestras bodegas posen un entorno amigable, rapido y de calidad para nuestros colaboradores</p>
         <a role="button" class="btn btn-primary btn-lg" href="{% url 'signupuser' %}">Start</a>
     </div>
 </div>
