--- a/todo/templates/todo/picking_ruta.html
+++ b/todo/templates/todo/picking_ruta.html
@@ -1,5 +1,25 @@
 {% extends "todo/base.html" %}
 {% block content %}
+<style>
+    h2 {
+        color: #ffc107;
+    }
+
+    .table thead th {
+        color: #ffc107;
+        border-bottom: 2px solid #ffc107;
+    }
+
+    a.btn-link {
+        color: #ffc107;
+    }
+
+        a.btn-link:hover {
+            color: #e0a800;
+            text-decoration: none;
+        }
+</style>
+
 <div class="row justify-content-center mt-5">
     <div class="col-md-6">
         <h2>Ruta de Picking</h2>
