--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -43,6 +43,9 @@
                     <li class="nav-item {{ picking }}">
                         <a class="nav-link" href="{% url 'crear_picking' %}">Picking</a>
                     </li>
+                    <li class="nav-item {{ devoluciones }}">
+                        <a class="nav-link" href="{% url 'crear_devolucion' %}">Devoluciones</a>
+                    </li>
                 </ul>
                 {% endif %}
                 <ul class="navbar-nav ml-auto">
