--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -11,7 +11,7 @@
     <div class="col-md-7 text-center">
 
         <h1>Sistema de Gestion de Bodega Todo</h1>
-        <p>Bienvenidos al sistema de Gestion de la bodega<u>Que</u> tenga Buen dia <b><i>Todo Woooo</i></b> Nuestras bodegas posen un entorno amigable, rapido y de calidad para nuestros colaboradores</p>
+        <p>Bienvenidos al sistema de Gestion de la bodega tenga buen dia <b></b> Nuestras bodegas posen un entorno amigable, rapido y de calidad para nuestros colaboradores</p>
         <a role="button" class="btn btn-primary btn-lg" href="{% url 'signupuser' %}">Start</a>
     </div>
 </div>
